--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,10 @@ body {
     background-color: rgba(231, 30, 183, .75);
     /*mix-blend-mode: multiply;*/
 }
+.pro-series-color {
+    background-color: rgba(231, 30, 183, .75);
+    /*mix-blend-mode: multiply;*/
+}
 
 /*.series-color:hover{*/
 /*background-color: rgba(231,30,183,1);*/
@@ -327,7 +331,7 @@ body {
     z-index: 1000 !important;
 }
 
-.selectable.spanner.series-color:hover {
+.selectable.spanner.series-color:hover, .selectable.spanner.pro-series-color:hover {
     transform: scale(1.15, 1.05);
 }
 
@@ -405,6 +409,7 @@ body {
     color: #484848;
     font-size: 105%;
     padding-top: 2px;
+    font-weight: 400;
 }
 
 .square-btn-copy {
@@ -462,7 +467,7 @@ body {
 /*!*mix-blend-mode: multiply;*!*/
 /*}*/
 
-.contained-series {
+.contained-series, .contained-pro-series {
     align-self: stretch;
     color: white;
     margin-left: 5px;
@@ -480,7 +485,7 @@ body {
 /*z-index: 1000;*/
 /*}*/
 
-.contained-series .label {
+.contained-series .label, .contained-pro-series .label {
     overflow: visible;
     transform: rotate(90deg);
     white-space: nowrap;
@@ -642,19 +647,19 @@ body {
     /*transform: translateXY();*/
     /*text-shadow: -1px -1px rgba(72, 72, 72, 0.2);*/
     padding: 5px;
-    z-index: 997;
+    z-index: 98;
     /*transform: rotateZ(8deg);*/
-    box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .2);
+    box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .4);
     width:90%;
     height:90%;
     margin-left: 5%;
-    margin-top: -3%;
+    margin-top: 0%;
     line-height: 16px;
 
 
 }
 .day-under-overlay {
-    filter: brightness(150%) blur(1px);
+    filter: brightness(150%) ;/*blur(1px)*/
 }
 
 .overlay .title {
@@ -669,9 +674,11 @@ body {
 
 .overlay .sub-title {
     color: rgba(51, 51, 51, 0.65);
-    font-size: 9pt;
+    font-size: 8pt;
+    line-height: 10pt;
     font-weight: 600;
     margin: 3px;
+
     /*height:20px;*/
 }
 
@@ -705,16 +712,18 @@ body {
 }
 
 .owned-day {
-    background-color: rgba(255, 0, 255, 0.5);
-    z-index: 999;
+    /*background-color: rgba(255, 0, 255, 0.5);*/
+    background-color: rgba(255, 255, 255, 1);
+    border-top: solid #9a9a9a 10px;
+    z-index: 99;
 
     /*box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .3);*/
 }
 .owned-day .title {
-    color:white;
+    color:#333;
 }
 .owned-day .sub-title {
-    color:white;
+    color:#999;
 }
 .filtering-header {
     display:flex;
@@ -758,8 +767,79 @@ body {
 }
 .sold-out {
     filter: grayscale(100%);
-    opacity: .3;
-    color: #333
+    background-color: rgba(214, 214, 214, 0.24);
+    /*border: solid rgba(51, 51, 51, 0.75) 2px;*/
+    /*opacity: .3;*/
+    color: rgba(133, 133, 133, 0.75);
     box-shadow: none;
+    font-weight:500;
+    /*order: 4;*/
+    /*border: dashed #b5b5b5 1px;*/
+}
+.sold-out.spanner {
     order: 4;
+    border-left: solid rgba(133, 133, 133, 0.75) 2px;
+    margin-top:5px;
+    margin-bottom:5px;
+
+
+}
+.sold-out > .square-btn-text {
+    background-color: transparent;
+    color: rgba(133, 133, 133, 0.75);
+}
+
+.view-day {
+    color:blue;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.view-day-content {
+    display:grid;
+    grid-template-columns: 1fr 3fr;
+    grid-gap: 10px;
+    /*font-size: 14pt;*/
+}
+.default-schedule-item {
+    color: #858585;
+    text-align: left;
+    font-style: italic;
+    font-weight: 400;
+}
+.italics {
+    font-style: italic;
+}
+.schedule-item {
+    color: #333;
+    text-align: left;
+    font-weight: 600;
+}
+.schedule-item-subtext {
+    font-size: 90%;
+    color: #707070;
+}
+.schedule-item.none {
+    color: rgba(255, 0, 0, 0.64);
+    font-style: italic;
+}
+.time-of-day {
+    color: #5f5f5f;
+    text-align: right;
+    font-weight: 500;
+
+}
+.button-section {
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+}
+.pro-series-btn {
+    margin: 5px;
+}
+.add-on-link {
+    text-decoration: underline;
+}
+.add-on-link:hover {
+    color:blue;
 }
