--- a/src/App.css
+++ b/src/App.css
@@ -734,6 +734,34 @@ container-hover {
 .owned-day .sub-title {
     color:#999;
 }
+
+.in-cart {
+    /*background-color: rgba(255, 0, 255, 0.5);*/
+    background-color: rgba(255, 42, 0, 0.65);
+    /*border-top: solid #333 10px;*/
+    z-index: 101;
+
+    /*box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .3);*/
+}
+.in-cart .title {
+    color:#fff;
+}
+.in-cart .sub-title {
+    color:#fff;
+}
+.in-cart .remove-day {
+    color:white;
+    text-decoration: underline;
+    cursor: pointer;
+    line-height: 20px;
+    text-transform: uppercase;
+}
+.in-cart .remove-day:hover {
+    color:rgba(255, 42, 0, 0.65);
+    background-color: white;
+    text-decoration: none;
+}
+
 .filtering-header {
     display:flex;
     flex-direction: row;
@@ -875,5 +903,16 @@ hr {
     color:blue;
 }
 .overlay:hover {
+
+}
+.tip-class {
+    background-color: #ffffff;
+    font-size:20pt;
+    color: #333;
+    box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .3);
+    max-width: 300px;
+    line-height: 16pt;
+    font-weight: 500;
+    text-align: left;
 
 }
