--- a/src/App.css
+++ b/src/App.css
@@ -168,6 +168,7 @@ body {
     flex-shrink: 1;
     font-size: 14px;
     text-align: center;
+
 }
 
 .span-monday-friday {
@@ -570,6 +571,8 @@ container-hover {
     display: flex;
     height: 40px;
     justify-content: center;
+    margin-top:-25px;
+
 }
 
 
@@ -600,6 +603,13 @@ container-hover {
     flex-direction: column;
     overflow: visible;
     width: 140px;
+}
+.change-view-btn {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    overflow: visible;
+    width: 300px;
 }
 
 .filtering-header .filtering-hover-text {
@@ -661,11 +671,13 @@ container-hover {
     box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .4);
     width:90%;
     height:90%;
-    margin-left: 5%;
-    margin-top: 0%;
+    margin-left: 6%;
+    margin-top: 3%;
     line-height: 16px;
 
-
+}
+.text-item-center {
+    align-self: center;
 }
 .day-under-overlay {
     filter: brightness(150%) ;/*blur(1px)*/
@@ -915,4 +927,21 @@ hr {
     font-weight: 500;
     text-align: left;
 
+}
+.age-notification {
+    font-size: 11pt;
+    color: #333;
+    /*margin-left:20%;*/
+    /*margin-right:20%;*/
+    line-height: 50px;
+    font-weight: 400;
+    font-style: italic;
+}
+.change-birthday:hover {
+    text-decoration: underline !important;
+    color: blue;
+    cursor: pointer;
+}
+.filtering-header {
+    font-size:28px;
 }
