--- a/src/App.css
+++ b/src/App.css
@@ -595,6 +595,7 @@ container-hover {
     align-self: flex-start;
     display: flex;
     flex-direction: column;
+    flex-shrink: 0;
 }
 
 .change-location-btn {
@@ -610,6 +611,8 @@ container-hover {
     flex-direction: column;
     overflow: visible;
     width: 300px;
+    margin-left:15px;
+    flex-shrink: 0;
 }
 
 .filtering-header .filtering-hover-text {
@@ -783,16 +786,24 @@ container-hover {
     justify-content: center;
     height: 65px;
     overflow: visible;
+    margin-right:-60px;
 }
 .filtering-header .text-center {
     margin-left:10px;
     margin-right:10px;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 950px) {
     .filtering-header {
-        font-size: 24px;
+        font-size: 24px !important;
     }
+    .filtering-header .filtering-hover-text {
+        cursor: pointer;
+        font-size: 12px;
+        font-weight: 600;
+        margin-top: 5px;
+    }
+
 }
 
 @media (max-width: 768px) {
@@ -944,4 +955,249 @@ hr {
 }
 .filtering-header {
     font-size:28px;
+}
+.show-only-week .monthly-view {
+    /*display: none;*/
+}
+
+.show-only-year .weekly-view {
+    display: none;
+}
+.week-grid {
+    color: #444;
+    background-color: #eaeaea;
+    display: grid;
+    /*grid-template-columns: repeat(7, [col] auto ); auto makes some columns wider or shoert which is :-( */
+    padding: 10px;
+    grid-gap: 8px;
+    grid-template-columns: [col] 1fr [col] 1fr [col] 1fr [col] 1fr [col] 1fr [col] 1fr [col] 1fr;
+    grid-template-columns: [col] 1fr [col] 1fr [col] 1fr [col] 1fr [col] 1fr [col] 1fr [col] 1fr;
+    grid-template-rows: [row] 1fr [row] 2fr [row] 2fr [row] 8fr [row] 2fr ;
+    grid-template-areas:
+            "header header header header header header header"
+            "week week week week week week week "
+            "expand expand expand expand expand expand expand ";
+}
+.big-day {
+    margin-bottom:30px;
+    border-radius: 4px;
+    width:100%;
+    display:flex;
+    background-color:white;
+    align-content: flex-start;
+    border-color: #444444;
+    box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .3);
+    flex-direction: column;
+    justify-content: flex-start;
+    min-height: 80px;
+    padding: 15px;
+    z-index: 10;
+}
+
+.big-day .top-container {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between ;
+    margin-bottom: 30px;
+
+}
+.big-day .date-container {
+    font-size: 35px;
+    text-align: left;
+    margin-top:10px;
+    margin-left:10px;
+}
+.big-day Button {
+    width:100%;
+}
+.big-day .content-container {
+    margin: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+.big-day .content-container .left-side {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-self: stretch;
+    width:30%;
+}
+
+.big-day .content-container .right-side {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    text-align: left;
+    margin-left:30px;
+}
+
+.big-day .content-container .left-side .pic {
+    background-color: grey;
+    height: 100%;
+    width: 200px;
+}
+
+
+.big-day .content-container .right-side .title {
+    font-size:28px;
+    font-weight:600;
+    margin-top:-5px;
+    line-height: 32px;
+    margin-bottom:5px;
+}
+.big-day .content-container .right-side .sub-title {
+    font-size:16px;
+    line-height: 20px;
+    font-weight:200;
+    margin-top:5px;
+    margin-bottom:10px;
+}
+.big-day .content-container .right-side .info-section{
+    /*margin-top:20px;*/
+    line-height: 20px;
+   display: flex;
+    flex-direction: column;
+    justify-items: flex-start;
+    margin-bottom:10px;
+    margin-top:5px;
+
+}
+.big-day .content-container .right-side .info-section .line-item{
+    display: flex;
+    flex-direction: row;
+    justify-items: flex-start;
+    font-size: 15px;
+    font-weight: 400;
+}
+.big-day .content-container .right-side .info-section .line-item .property{
+    color: #929292;
+    font-style: italic;
+    text-align: right;
+    min-width:40px;
+}
+.big-day .content-container .right-side .info-section .line-item .detail{
+    margin-left:20px;
+    color: #333;
+    flex-grow: 1;
+    text-align: left
+}
+.big-day .bottom-container{
+    margin: 10px;
+    margin-top:15px;
+    display: flex;
+    flex-direction: row;
+    justify-items: stretch;
+    height: 40px;
+
+}
+.or-thing {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    margin-left:10px;
+    margin-right: 10px;
+    color: #929292;
+}
+.or-thing .vertical-bar {
+    width:0px;
+    height: 25px;
+    border-left: solid 2px #c9c9c9;
+}
+.bottom-container .btn-1 {
+    width: 290px;
+    height:40px;
+}
+Button.btn-2 {
+
+    height:40px;
+    flex-shrink: 0;
+}
+.price-text {
+    font-size:26px;
+}
+.button-col {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-self: stretch;
+    width: 100%;
+    margin-bottom:-25px;
+}
+.add-to-text {
+    font-size: 14px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    font-weight:400;
+    color: #929292;
+    font-style: italic;
+}
+.tag {
+    height:16px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    border-radius: 10px;
+    min-width:40px;
+    padding:8px;
+    background-color: rgba(51, 51, 51, 0.56);
+    color: white;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 400;
+    margin:3px;
+    align-items: center;
+}
+.title-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+.tags {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-content: flex-end;
+    flex-grow: 1;
+    margin-right:-10px;
+}
+.tag-red {
+    background-color: rgba(255, 0, 0, 0.52);
+}
+.tag-green {
+    background-color: rgba(0, 128, 0, 0.49);
+}
+.tag-blue {
+    background-color: rgba(0, 0, 255, 0.51);
+}
+.big-day-title {
+    font-size: 32px;
+    margin-top:30px;
+    margin-bottom:20px;
+    text-align: left;
+}
+.waitlist-text {
+    text-decoration: underline;
+    color: blue;
+    cursor: pointer;
+    font-style: normal;
+}
+.pro-tag {
+    /*width:60px;*/
+    height:30px;
+    font-size:18px;
+    border: solid 2px #333;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    font-weight: 700;
+    color: #333333;
+    float: left;
+    padding:4px;
+    margin-right:6px;
+
+
 }
