7 to 14 age group recognized/not filtered

--- a/src/AltViews.css
+++ b/src/AltViews.css
@@ -54,7 +54,7 @@
 
 .overlay {
     background-color: rgba(0, 0, 255, 0.37);
-    z-index: 9001;
+    z-index: 1001;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -78,16 +78,38 @@
     font-size:44px;
     color:white;
 }
+.overlay.holiday {
+    box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .25);
+    background-color: transparent;
+    mix-blend-mode: normal;
+    padding:3px;
+}
+.overlay.birthday {
+    box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .25);
+    mix-blend-mode: normal;
+    padding:3px;
+    color:#333;
+    font-weight: 800;
+    cursor: pointer;
+}
+.overlay.birthday:hover {
+    /*display: none;*/
+}
+
+
 .in-cart {
     /*background-color: rgba(255, 0, 255, 0.5);*/
-    background-color: rgba(255, 42, 0, 0.65);
+    background-color: rgba(255, 42, 0, 0.4);
     /*border-top: solid #333 10px;*/
-    z-index: 101;
-
-    /*box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .3);*/
+    z-index: 1001;
+    box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, .3);
+    font-weight: 600;
 }
 .in-cart .title {
     color:#fff;
+}
+.overlay.birthday .title{
+    line-height:15px;
 }
 .in-cart .sub-title {
     color:#fff;
@@ -196,7 +218,7 @@
 }
 
 .overlay .sub-title {
-    color: rgba(51, 51, 51, 0.65);
+    color: rgba(0, 0, 0, 0.65);
     font-size: 8pt;
     line-height: 10pt;
     font-weight: 400;
