--- a/src/AltViews.css
+++ b/src/AltViews.css
@@ -1,3 +1,8 @@
+:root {
+    --shadow : 1px 1px 3px 0 rgba(0, 0, 0, .25);
+    --lightColor : #979797;
+}
+
 .day {
     transition: all 150ms ease-out;
     z-index:1000;
@@ -5,23 +10,23 @@
 }
 
 .day:hover:not(.closed):not(.no-day):not(.highlighted) {
-    transform: scale(1.15, 1.15);
+    /*transform: scale(1.15, 1.15);*/
     cursor: pointer;
-    background-color: white;
+    background-color: #f5f5f5;
     /*box-shadow: 2px 2px 30px 2px rgba(0, 0, 0, .15);*/
     z-index: 100;
     transition: all 150ms ease-out;
 
 }
 
-.day:active:not(.highlighted) {
-    transform: scale(.95, .95);
-    cursor: pointer;
-    box-shadow: none;
-    z-index: 100;
-    transition: all 150ms;
+/*.day:active:not(.highlighted) {*/
+    /*transform: scale(.95, .95);*/
+    /*cursor: pointer;*/
+    /*box-shadow: none;*/
+    /*z-index: 100;*/
+    /*transition: all 150ms;*/
 
-}
+/*}*/
 
 .day.highlighted {
     /*border: solid 2px #333;*/
@@ -349,7 +354,6 @@
     flex-direction: row;
     justify-content: center;
     align-content: stretch;
-    max-width:350px;
 
 }
 
@@ -584,6 +588,12 @@ Button.btn-2:hover {
     margin-top:30px;
     margin-bottom:20px;
     text-align: center;
+    /*border: solid 4px #333;*/
+    padding:12px;
+    line-height: 32px;
+    /*background-color: white;*/
+    /*box-shadow: var(--shadow);*/
+    color: var(--lightColor);
 }
 .waitlist-text {
     text-decoration: underline;
