--- a/src/App.css
+++ b/src/App.css
@@ -2057,6 +2057,9 @@ body {
     /*text-shadow: 1px 1px rgba(72, 72, 72, 0.3);*/
 
 }
+.closed .date-number{
+    color: #d2d2d2 !important;
+}
 
 .date-icon {
     color: black;
