--- a/src/App.css
+++ b/src/App.css
@@ -1924,10 +1924,22 @@
     text-align: center;
 
 }
+.full-page-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: stretch;
+}
+.cart-placeholder {
+    width: 320px;
+    align-self: flex-end;
+    justify-self: flex-end;
+    flex-shrink: 0;
+}
 .container {
 
-    width: 80%;
-    margin-left: 10%
+    width: 95%;
+    margin-left: 2%;
 }
 
 body {
@@ -2267,18 +2279,22 @@ body {
 .filters {
     background-color: rgb(247, 247, 247);
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     padding-top: 20px;
-    padding-left: 0px;
-    padding-right: 50px;
+    /*padding-left: 0px;*/
+    /*padding-right: 50px;*/
     z-index: 1000;
     width: 100%;
+    line-height: 18px;
 
 }
 
 .filter-circle-container {
     display: flex;
     flex-direction: row;
+    margin-left:5px;
+    align-items: center;
+    width:100%;
 }
 
 .filter-circle-filled {
@@ -2287,7 +2303,7 @@ body {
     height: 23px;
     width: 23px;
     margin-top:-3px;
-    margin-right:10px;
+    margin-right:5px;
 }
 
 .filter-circle-filled:hover {
@@ -2310,10 +2326,12 @@ body {
 }
 
 .filter-circle-label {
-    flex-grow: 30%;
-    height: 100%;
+    /*flex-grow: 30%;*/
+    /*height: 100%;*/
     justify-content: center;
-    text-align: center;
+    text-align: left;
+    font-size: 15px;
+    margin-right:10px;
 }
 
 .filter-circle-label.disabled {
@@ -2534,6 +2552,7 @@ container-hover {
     margin-bottom:20px;
     font-weight: 400;
     font-size: 11pt;
+    position: relative;
     /*text-decoration: underline;*/
 }
 .top-link {
@@ -2576,10 +2595,10 @@ container-hover {
     /*justify-items: center;*/
     align-items: flex-start;
     /*align-content: space-around;*/
-    justify-content: flex-start;
+    justify-content: center;
     height: 65px;
     overflow: visible;
-    margin-right:-60px;
+    /*margin-right:-60px;*/
 }
 .filtering-header .text-center {
     margin-left:10px;
@@ -2603,12 +2622,9 @@ container-hover {
     .heading {
         display:none;
     }
-    .filter-circle-filled {
-        display:none;
-    }
+
     .filters {
-        justify-content: space-between;
-        align-content: space-between;
+        display:none;
     }
     .filter-circle-container {
         width: 25%;
